--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.3.31",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.7",
     "react": "^18",
