--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    // "react/jsx-uses-react": "off",
-    // "react/react-in-jsx-scope": "off",
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off",
     "react-hooks/rules-of-hooks": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
